--- a/moderation/package.json
+++ b/moderation/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "query",
+  "name": "moderation",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.22.0",
-    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.13"
   }
